--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "vite build && vue-tsc",
+    "build:only": "vite build",
+    "build": "vite build && vue-tsc --declaration --emitDeclarationOnly",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -37,9 +38,12 @@
   },
   "devDependencies": {
     "@types/node": "^20.10.7",
-    "@vitejs/plugin-vue": "^4.5.2",
+    "@vitejs/plugin-vue": "^4.6.2",
+    "sass": "^1.69.7",
     "typescript": "^5.2.2",
-    "vite": "^5.0.8",
+    "vite": "^5.0.11",
+    "vite-plugin-dts": "^3.7.0",
+    "vite-plugin-style-inject": "^0.0.1",
     "vue-tsc": "^1.8.25"
   }
 }
