--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,16 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "useDefineForClassFields": true,
+    "target": "ESNext",
     "module": "ESNext",
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "lib": ["ESNext", "DOM", "DOM.Iterable"],
     "skipLibCheck": true,
-
-    /* Bundler mode */
-    "moduleResolution": "bundler",
+    "baseUrl": "./",
+    "paths":{
+      "@p/*": ["./packages/*"]
+     },
+    "moduleResolution": "Node",
     "resolveJsonModule": true,
-    "isolatedModules": true,
     "outDir": "dist",
-    "emitDeclarationOnly": true, // 只输出声明文件(ts 产物)
-    "declaration": true, // 自动生成声明文件
-    "declarationDir": "dist", // 声明文件生成的目录
     "jsx": "preserve",
 
     /* Linting */
@@ -23,5 +20,5 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": ["packages/**/*.ts", "packages/**/*.tsx", "packages/**/*.vue"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "exclude": ["node_modules"]
 }
