--- a/package.json
+++ b/package.json
@@ -31,12 +31,16 @@
     "dev": "vite",
     "build:only": "vite build",
     "build": "vite build && vue-tsc --declaration --emitDeclarationOnly",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "changset": "changeset",
+    "publish:packages": "changeset publish",
+    "version:packages": "changeset version"
   },
   "dependencies": {
     "vue": "^3.3.11"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.27.1",
     "@types/node": "^20.10.7",
     "@vitejs/plugin-vue": "^4.6.2",
     "sass": "^1.69.7",
